adjust and fix the instagram and linkedin miss align

--- a/WebAppProj/Views/Home/Login.cshtml.css
+++ b/WebAppProj/Views/Home/Login.cshtml.css
@@ -148,8 +148,6 @@
   height: 32px;
 }
 
-
-
 .button2 {
   background: #17c470;
   border-radius: 74px;
@@ -264,8 +262,7 @@
 
 .contact-us-instagram-linkedin-span3 {
   color: #000000;
-  position: relative;
-  z-index: 1;
-  top: 20px;
-  font: 300 24px "Sora", sans-serif;
+  z-index: 5;
+  font: 300 24px 'Sora', sans-serif;
+  text-decoration: underline;
 }
